--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ h3 {
     font-family: "Volkhov", serif;
 }
 
+code {
+    font-family: 'Ubuntu Mono', monospace;
+}
+
 header,
 footer {
     background-color: #333;
@@ -47,10 +51,6 @@ h1 {
     margin: 0;
 }
 
-ul {
-    list-style-type: none;
-}
-
 div {
     margin-bottom: 10px;
 }
@@ -64,10 +64,14 @@ div {
     position: fixed;
 }
 
-.icon-tabler-x, .icon-tabler-x2 {
+.icon-tabler-x, .icon-tabler-x2, .icon-tabler-trash {
     right: 1rem;
     top: 20px;
     position: fixed;
+}
+
+.icon-tabler-trash {
+    right: 4rem;
 }
 
 #title, #title2 {
@@ -97,4 +101,16 @@ div {
     background-color: #333;
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
+}
+
+.textpreview {
+    display: flex;
+}
+
+.textpreview p {
+    margin-right: 10px;
+}
+
+#list div h3 {
+    margin-bottom: 0;
 }
