--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ td {
     border: 1px solid white;
     border-collapse: collapse;
     padding: 5px;
+    word-break: normal;
 }
 
 th {
@@ -202,4 +203,27 @@ th {
 
 #view-title {
     word-break: break-all;
+}
+
+.textpreview {
+    word-break: break-all;
+}
+
+button {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    font-family: 'Open Sans', sans-serif;
+    padding: 0.8rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+}
+
+button:hover {
+    color: black;
+    background-color: #CCC;
 }
