Improved perfomance while editing notes, added sorting options

--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ th {
 }
 
 button {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     padding: 0.8rem;
     font-size: 1rem;
     border: none;
@@ -256,19 +256,53 @@ button {
 
 button:hover {
     color: black;
-    background-color: #CCC;
+    background-color: #ccc;
 }
 
-.password-form, .password-form2 {
+.password-form,
+.password-form2 {
     display: none;
     padding: 1rem;
     padding-top: 2rem;
 }
 
-.password-form-input, .password-form2-input {
+.password-form-input,
+.password-form2-input {
     margin-top: 1rem;
 }
 
-.password-form.show, .password-form2.show {
+.password-form.show,
+.password-form2.show {
     display: block;
+}
+
+.popup {
+    right: 4rem;
+    top: 15px;
+    position: absolute;
+}
+
+.popup .popuptext {
+    display: none;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 100;
+    top: 100%;
+    right: 0;
+    opacity: 0;
+    transition: opacity 0.3s;
+    line-height: 45px;
+}
+
+.sort {
+    margin: 0;
+}
+
+.popup .show {
+    display: block;
+    opacity: 1;
 }
